# anime

./: .gitignore  README.md  env_sample  pyproject.toml  pytest.ini
src/: manage.py
src/apps/achievements/: admin.py  models.py
src/apps/achievements/migrations/: 0001_initial.py  0002_alter_achievement_options.py
src/apps/anime/: admin.py  const.py  models.py
src/apps/anime/api/: serializer.py  serializers.py  services.py  views.py
src/apps/anime/migrations/: 0001_initial.py  0002_animeseasons_animeseries_animevideos.py  0003_animeseason_animevideo_remove_animeseasons_anime_and_more.py  0004_alter_anime_options_alter_animeseason_anime.py  0005_alter_animeseason_options_alter_animeseries_season.py  0006_alter_animeseries_options.py  0007_alter_animevideo_options_remove_animeseries_name.py  0008_animeseries_name.py  0009_alter_animeseries_name.py  0010_anime_status.py  0011_alter_anime_status.py  0012_alter_anime_composition.py  0013_alter_animevideo_series.py
src/apps/api_auth/api/: urls.py
src/apps/compositions/: admin.py  models.py  views.py
src/apps/compositions/api/: serializer.py  serializers.py  services.py  views.py
src/apps/compositions/migrations/: 0001_initial.py  0002_alter_composition_discription_and_more.py  0003_rename_discription_composition_description.py  0004_alter_composition_options.py
src/apps/manga/: admin.py  const.py  models.py
src/apps/manga/api/: serializer.py  (+3 more)
src/apps/ranobe/: admin.py  models.py
src/apps/users/: admin.py  const.py  models.py  signals.py
src/media_web/: asgi.py  const.py  settings.py  urls.py  wsgi.py
(+37 files in other folders)
